Update ALICE Strangeness - Large Scale Analysis - C++.ipynb

--- a/ALICE Strangeness - Large Scale Analysis - C++.ipynb
+++ b/ALICE Strangeness - Large Scale Analysis - C++.ipynb
@@ -131,6 +131,57 @@
     "bg->Draw(\"same\");\n",
     "c2.Draw();"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TMatrixDSym tCov = result->GetCovarianceMatrix();\n",
+    "TMatrixDSym bCov(3);\n",
+    "\n",
+    "for (Int_t i = 0; i < 3; i++) {\n",
+    "    for (Int_t j = 0; j < 3; j++) {\n",
+    "        bCov(i, j) = tCov(3 + i, 3 + j);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Double_t dx = histogram->GetXaxis()->GetBinWidth(1);\n",
+    "\n",
+    "auto Total = fit->Integral(sg_min, sg_max);\n",
+    "auto TotalE = fit->IntegralError(sg_min, sg_max, result->GetParams(), tCov.GetMatrixArray());\n",
+    "auto Back = bg->Integral(sg_min, sg_max);\n",
+    "auto BackE = bg->IntegralError(sg_min, sg_max, &(result->GetParams()[3]), bCov.GetMatrixArray());\n",
+    "\n",
+    "Total /= dx;\n",
+    "TotalE /= dx;\n",
+    "Back /= dx;\n",
+    "BackE /= dx;\n",
+    "\n",
+    "auto Signal = Total - Back;\n",
+    "auto SignalE = TMath::Sqrt(TotalE * TotalE + BackE * BackE);\n",
+    "\n",
+    "auto Mean = fit->GetParameter(1);\n",
+    "auto MeanE = fit->GetParError(1);\n",
+    "\n",
+    "auto Sigma = fit->GetParameter(2);\n",
+    "auto SigmaE = fit->GetParError(2);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "printf(\"Entries:\\t%d\\n\", int(histogram->GetEntries()));\n",
+    "printf(\"Total:\\t\\t%6.0f +- %3.0f\\n\", Total, TotalE);\n",
+    "printf(\"Background:\\t%6.0f +- %3.0f\\n\", Back, BackE);\n",
+    "printf(\"Signal:\\t\\t%6.0f +- %3.0f\\n\", Signal, SignalE);\n",
+    "printf(\"Mean:\\t\\t%6.4f +- %6.4f\\n\", Mean, MeanE);\n",
+    "printf(\"Sigma:\\t\\t%6.4f +- %6.4f\\n\", Sigma, SigmaE);"
+   ]
   }
  ],
  "metadata": {
